<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ngo_fastival"
    android:background="#F5F5DC">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_gradient3"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Celebrate With Us!"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Empowering Communities, Transforming Lives"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:background="@drawable/card_gradient_background"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cl"
                        android:background="@drawable/image_corner_radius"
                        android:layout_marginBottom="16dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cultural_festivals"
                        android:textColor="#2C3E50"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Celebrate with us! Our NGO hosts and participates in various festivals that bring communities together..."
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Experience the power of unity as we come together to uplift lives, share stories of change, and celebrate the spirit of giving. Your presence can light up a future!"
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText,VisualLintLongText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:background="@drawable/card_gradient_background"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/holi"
                        android:background="@drawable/image_corner_radius"
                        android:layout_marginBottom="16dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Holi Festivals"
                        android:textColor="#2C3E50"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Celebrate with us! Our NGO hosts and participates in various festivals that bring communities together..."
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Experience the power of unity as we come together to uplift lives, share stories of change, and celebrate the spirit of giving. Your presence can light up a future!"
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText,VisualLintLongText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:background="@drawable/card_gradient_background"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/din"
                        android:background="@drawable/image_corner_radius"
                        android:layout_marginBottom="16dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diwali_festivals"
                        android:textColor="#2C3E50"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Celebrate with us! Our NGO hosts and participates in various festivals that bring communities together..."
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Experience the power of unity as we come together to uplift lives, share stories of change, and celebrate the spirit of giving. Your presence can light up a future!"
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText,VisualLintLongText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:background="@drawable/card_gradient_background"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chr"
                        android:background="@drawable/image_corner_radius"
                        android:layout_marginBottom="16dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/christmas_festivals"
                        android:textColor="#2C3E50"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/celebrate_with_us_our_ngo_hosts_and_participates_in_various_festivals_that_bring_communities_together"
                        android:textColor="#2C3E50"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/experience_the_power_of_unity_as_we_come_together_to_uplift_lives_share_stories_of_change_and_celebrate_the_spirit_of_giving_your_presence_can_light_up_a_future"
                        android:textColor="#2C3E50"
                        android:textSize="16sp"
                        tools:ignore="VisualLintLongText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_gradient3"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nehal Foundation"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Empowering Communities, Transforming Lives"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact us: info@nehalfoundation.org"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/facebook"
                android:layout_marginEnd="8dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/instagram"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
